fixing amazon alignment issue

--- a/src/web/public/stylesheets/style.css
+++ b/src/web/public/stylesheets/style.css
@@ -211,6 +211,7 @@ header div.loginbox img {
 }
 
 .book-details {
+  width:100%;
   padding-left: 10px;
 }
 
